--- a/201903022101.html
+++ b/201903022101.html
@@ -24,15 +24,15 @@
 		
 <h4>2. 几个重要的功能关系</h4>
 
-	1. 重力的功等于重力势能的变化,即<mrow><msub><mi>W</mi>f</msub><mo>=</mo><mo>-</mo><msub><mi>△E</mi>pG</msub></mrow>
+	1. 重力的功等于重力势能的变化,即<math><mrow><msub><mi>W</mi>f</msub><mo>=</mo><mo>-</mo><msub><mi>△E</mi>pG</msub></mrow></math>
 	
-	2. 弹力的功等于弹性势能的变化,即<mrow><msub><mi>W</mi>弹</msub><mo>=</mo><mo>-</mo><msub><mi>△E</mi>p弹</msub>
+	2. 弹力的功等于弹性势能的变化,即<math><mrow><msub><mi>W</mi>弹</msub><mo>=</mo><mo>-</mo><msub><mi>△E</mi>p弹</msub></math>
 	
-	3. 合力的功等于动能的的变化,即<mrow><mi>W</mi><mo>=</mo><mo></mo><msub><mi>△E</mi>k</msub>
+	3. 合力的功等于动能的的变化,即<math><mrow><mi>W</mi><mo>=</mo><mo></mo><msub><mi>△E</mi>k</msub></math>
 	
-	4. 重力(或系统内弹簧弹力)之外的其他力的功等于机械能的变化,即<mrow><msub><mi>W</mi>其他</msub><mo>=</mo><mi>△E</mi>
+	4. 重力(或系统内弹簧弹力)之外的其他力的功等于机械能的变化,即<math><mrow><msub><mi>W</mi>其他</msub><mo>=</mo><mi>△E</mi></math>
 	
-	5. 一对滑动摩擦力做的功等于热量的变化，即<mrow><mi>Q</mi><mo>=</mo><msub><mi>F</mi>f</msub><mo>·</mo><msub><mi>x</mi>相对</msub></mrow>
+	5. 一对滑动摩擦力做的功等于热量的变化，即<math><mrow><mi>Q</mi><mo>=</mo><msub><mi>F</mi>f</msub><mo>·</mo><msub><mi>x</mi>相对</msub></mrow></math>
 
 <h4>3. 在动力学和能量观点的综合运用中：</h4>
 
@@ -67,30 +67,30 @@
 </p>
 <p>(1)小球由A自由下落到管口B的过程中机械能守恒，故有：
 </p>
-<mrow><mi>mg</mi><mo>·</mo><mn>4</mn><mi>R</mi><mo>=</mo><mtable><mtr><mtd><mn>1</mn></mtd></mtr><mtr><mtd><mo>-</mo></mtd></mtr><mtr><mtd><mn>2</mn></mtd></mtr></mtable><mi>m</mi><msup><msub><mi>v</mi>B</msub>2</msup></mrow>
+<math><mrow><mi>mg</mi><mo>·</mo><mn>4</mn><mi>R</mi><mo>=</mo><mtable><mtr><mtd><mn>1</mn></mtd></mtr><mtr><mtd><mo>-</mo></mtd></mtr><mtr><mtd><mn>2</mn></mtd></mtr></mtable><mi>m</mi><msup><msub><mi>v</mi>B</msub>2</msup></mrow></math>
 
-<mrow><msub><mi>v</mi><mi>B</mi></msub><mo>=</mo><msqrt><mn>8</mn><mi>gR</mi></mrow>
+<math><mrow><msub><mi>v</mi><mi>B</mi></msub><mo>=</mo><msqrt><mn>8</mn><mi>gR</mi></mrow></math>
 
 
 <p>（2）设电场力的竖直分力为Fy，水平分力为Fx，则Fy=mg(方向竖直向上)
 </p>
-<p>小球从B运动到C的过程中，由动能定理得：<mrow><mo>-</mo><msub><mi>F</mi><mi>x</mi></msub><mo>·</mo><mi>2R</mi><mo>=</mo><mtable><mtr><mtd><mn>1</mn></mtd></mtr><mtr><mtd><mo>-</mo></mtd></mtr><mtr><mtd><mn>2</mn></mtd></mtr></mtable><mi>m</mi><msup><msub><mi>v</mi><mi>c</mi></msub><mn>2</mn></msup><mo>-</mo><mtable><mtr><mtd><mn>1</mn></mtd></mtr><mtr><mtd><mo>-</mo></mtd></mtr><mtr><mtd><mn>2</mn></mtd></mtr></mtable><mi>m</mi><msup><msub><mi>v</mi><mi>B</mi></msub><mn>2</mn></msup></mrow>
+<p>小球从B运动到C的过程中，由动能定理得：<math><mrow><mo>-</mo><msub><mi>F</mi><mi>x</mi></msub><mo>·</mo><mi>2R</mi><mo>=</mo><mtable><mtr><mtd><mn>1</mn></mtd></mtr><mtr><mtd><mo>-</mo></mtd></mtr><mtr><mtd><mn>2</mn></mtd></mtr></mtable><mi>m</mi><msup><msub><mi>v</mi><mi>c</mi></msub><mn>2</mn></msup><mo>-</mo><mtable><mtr><mtd><mn>1</mn></mtd></mtr><mtr><mtd><mo>-</mo></mtd></mtr><mtr><mtd><mn>2</mn></mtd></mtr></mtable><mi>m</mi><msup><msub><mi>v</mi><mi>B</mi></msub><mn>2</mn></msup></mrow></math>
 </p>
-<p>小球从管口C运动到A点做类平抛运动，有<mrow><mi>y</mi><mo>=</mo><mn>4</mn><mi>R</mi><mo>=</mo><msub><mi>v</mi><mi>C</mi></msub><mi>t</mi></mrow>
+<p>小球从管口C运动到A点做类平抛运动，有<math><mrow><mi>y</mi><mo>=</mo><mn>4</mn><mi>R</mi><mo>=</mo><msub><mi>v</mi><mi>C</mi></msub><mi>t</mi></mrow></math>
 </p>
-<p><mrow><mi>x</mi><mo>=</mo><mn>2</mn><mi>R</mi><mo>=</mo><mtable><mtr><mtd><mn>1</mn></mtd></mtr><mtr><mtd><mo>-</mo></mtd></mtr><mtr><mtd><mn>2</mn></mtd></mtr></mtable><msub><mi>a</mi><mi>x</mi></msub><msup><mi>t</mi><mn>2</mn></msup><mo>=</mo><mtable><mtr><mtd><mn><msub><mi>F</mi><mi>x</mi></msub></mn></mtd></mtr><mtr><mtd><mo>----</mo></mtd></mtr><mtr><mtd><mn>2</mn><mi>m</mi></mtd></mtr></mtable><msup><mi>t</mi><mn>2</mn></msup></mrow>
+<p><math><mrow><mi>x</mi><mo>=</mo><mn>2</mn><mi>R</mi><mo>=</mo><mtable><mtr><mtd><mn>1</mn></mtd></mtr><mtr><mtd><mo>-</mo></mtd></mtr><mtr><mtd><mn>2</mn></mtd></mtr></mtable><msub><mi>a</mi><mi>x</mi></msub><msup><mi>t</mi><mn>2</mn></msup><mo>=</mo><mtable><mtr><mtd><mn><msub><mi>F</mi><mi>x</mi></msub></mn></mtd></mtr><mtr><mtd><mo>----</mo></mtd></mtr><mtr><mtd><mn>2</mn><mi>m</mi></mtd></mtr></mtable><msup><mi>t</mi><mn>2</mn></msup></mrow></math>
 </p>
-<p>解得：<mrow><msub><mi>F</mi><mi>x</mi></msub><mo>=</mo><mi>mg</mi></mrow>
+<p>解得：<math><mrow><msub><mi>F</mi><mi>x</mi></msub><mo>=</mo><mi>mg</mi></mrow></math>
 </p>
-<p>电场力的大小：<mrow><msub><mi>F</mi>电</msub><mo>=</mo><msqrt><msup><msub><mi>F</mi><mi>x</mi></msub>2</msup><mo>+</mo><msup><msub><mi>F</mi><mi>y</mi></msub>2</msup></msqrt><mo>=</mo><msqrt>2</msqrt><mi>mg</mi></mrow>
+<p>电场力的大小：<math><mrow><msub><mi>F</mi>电</msub><mo>=</mo><msqrt><msup><msub><mi>F</mi><mi>x</mi></msub>2</msup><mo>+</mo><msup><msub><mi>F</mi><mi>y</mi></msub>2</msup></msqrt><mo>=</mo><msqrt>2</msqrt><mi>mg</mi></mrow></math>
 </p>
-<p>（3）小球经过管口C处时， <mrow><msub><mi>v</mi><mi>c</mi></msub><mo>=</mo><mn>2</mn><msqrt><mi>gR</mi></msqrt></mrow>          
+<p>（3）小球经过管口C处时， <math><mrow><msub><mi>v</mi><mi>c</mi></msub><mo>=</mo><mn>2</mn><msqrt><mi>gR</mi></msqrt></mrow></math>          
 </p>
-<p>设弹力N的方向向左，则：  <mrow><msub><mi>F</mi>x</msub><mo>-</mo><mi>N</mi><mo>=</mo><mi>m</mi><mtable><mtr><mtd><msup><msub><mi>v</mi><mi>C</mi></msub>2</msup></mtd></mtr><mtr><mtd><mo>---</mo></mtd></mtr><mtr><mtd><mi>R</mi></mtd></mtr></mtable></mrow>       
+<p>设弹力N的方向向左，则：  <math><mrow><msub><mi>F</mi>x</msub><mo>-</mo><mi>N</mi><mo>=</mo><mi>m</mi><mtable><mtr><mtd><msup><msub><mi>v</mi><mi>C</mi></msub>2</msup></mtd></mtr><mtr><mtd><mo>---</mo></mtd></mtr><mtr><mtd><mi>R</mi></mtd></mtr></mtable></mrow></math>       
 </p>
 <p>解得：N=3mg(方向向左)</p>               
 
-<p>根据牛顿第三定律可知，小球经过管口C处时对圆管的压力<mrow><msup><mi>N</mi><mo>'</mo></msup><mo>=</mo><mi>N</mi><mo>=</mo><mi>3mg</mi></mrow>
+<p>根据牛顿第三定律可知，小球经过管口C处时对圆管的压力<math><mrow><msup><mi>N</mi><mo>'</mo></msup><mo>=</mo><mi>N</mi><mo>=</mo><mi>3mg</mi></mrow></math>
 ，方向水平向右</p>      
 
 
@@ -109,4 +109,5 @@
 <h3> 总结：</h3>           
 
 <p>在进行此类问题求解的时候，需要找到运动物体的受力情况与功能关系变化情况，依照动能定理、机械能守恒定律、牛顿运动定律进行问题的分析与解答，灵活运用多运动过程分解、多运动过程合并等进行解题。</p>
-</body>
+</math>
+	</body>
