--- a/201903022101.html
+++ b/201903022101.html
@@ -3,7 +3,11 @@
 <title="2019.3.2物理">
 </head>
 <body>
+	<script>window.MathJax = { MathML: { extensions: ["mml3.js", "content-mathml.js"]}};</script>
+
+<script type="text/javascript" async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=MML_HTMLorMML"></script>
 <math xmlns="http://www.w3.org/1998/Math/MathML">
+	
 
 <h1> 题型：功、功率和功能关系的计算题</h1>
 
