--- a/201903022101.html
+++ b/201903022101.html
@@ -71,7 +71,7 @@
 </p>
 <p>(1)小球由A自由下落到管口B的过程中机械能守恒，故有：
 </p>
-<math><mrow><mi>mg</mi><mo>·</mo><mn>4</mn><mi>R</mi><mo>=</mo><mtable><mtr><mtd><mn>1</mn></mtd></mtr><mtr><mtd><mo>-</mo></mtd></mtr><mtr><mtd><mn>2</mn></mtd></mtr></mtable><mi>m</mi><msup><msub><mi>v</mi><mi>B</mi></msub>2</msup></mrow></math>
+<math><mrow><mi>mg</mi><mo>·</mo><mn>4</mn><mi>R</mi><mo>=</mo><mtable><mtr><mtd><mn>1</mn></mtd></mtr><mtr><mtd><mo>-</mo></mtd></mtr><mtr><mtd><mn>2</mn></mtd></mtr></mtable><mi>m</mi><msup><msub><mi>v</mi><mi>B</mi></msub><mn>2</mn></msup></mrow></math>
 
 <math><mrow><msub><mi>v</mi><mi>B</mi></msub><mo>=</mo><msqrt><mn>8</mn><mi>gR</mi></mrow></math>
 
@@ -86,11 +86,11 @@
 </p>
 <p>解得：<math><mrow><msub><mi>F</mi><mi>x</mi></msub><mo>=</mo><mi>mg</mi></mrow></math>
 </p>
-<p>电场力的大小：<math><mrow><msub><mi>F</mi><mi>电</mi></msub><mo>=</mo><msqrt><msup><msub><mi>F</mi><mi>x</mi></msub>2</msup><mo>+</mo><msup><msub><mi>F</mi><mi>y</mi></msub>2</msup></msqrt><mo>=</mo><msqrt>2</msqrt><mi>mg</mi></mrow></math>
+<p>电场力的大小：<math><mrow><msub><mi>F</mi><mi>电</mi></msub><mo>=</mo><msqrt><msup><msub><mi>F</mi><mi>x</mi></msub>2</msup><mo>+</mo><msup><msub><mi>F</mi><mi>y</mi></msub><mn>2</mn></msup></msqrt><mo>=</mo><msqrt><mn>2</mn></msqrt><mi>mg</mi></mrow></math>
 </p>
 <p>（3）小球经过管口C处时， <math><mrow><msub><mi>v</mi><mi>c</mi></msub><mo>=</mo><mn>2</mn><msqrt><mi>gR</mi></msqrt></mrow></math>          
 </p>
-<p>设弹力N的方向向左，则：  <math><mrow><msub><mi>F</mi><mi>x</mi></msub><mo>-</mo><mi>N</mi><mo>=</mo><mi>m</mi><mtable><mtr><mtd><msup><msub><mi>v</mi><mi>C</mi></msub>2</msup></mtd></mtr><mtr><mtd><mo>---</mo></mtd></mtr><mtr><mtd><mi>R</mi></mtd></mtr></mtable></mrow></math>       
+<p>设弹力N的方向向左，则：  <math><mrow><msub><mi>F</mi><mi>x</mi></msub><mo>-</mo><mi>N</mi><mo>=</mo><mi>m</mi><mtable><mtr><mtd><msup><msub><mi>v</mi><mi>C</mi></msub><mn>2</mn></msup></mtd></mtr><mtr><mtd><mo>---</mo></mtd></mtr><mtr><mtd><mi>R</mi></mtd></mtr></mtable></mrow></math>       
 </p>
 <p>解得：N=3mg(方向向左)</p>               
 
