--- a/201903022101.html
+++ b/201903022101.html
@@ -28,15 +28,15 @@
 		
 <h4>2. 几个重要的功能关系</h4>
 
-	1. 重力的功等于重力势能的变化,即<math><mrow><msub><mi>W</mi><mi>f</mi></msub><mo>=</mo><mo>-</mo><msub><mi>△E</mi>pG</msub></mrow></math>
+	1. 重力的功等于重力势能的变化,即<math><mrow><msub><mi>W</mi><mi>f</mi></msub><mo>=</mo><mo>-</mo><msub><mi>△E</mi><mi>pG</mi></msub></mrow></math>
 	
-	2. 弹力的功等于弹性势能的变化,即<math><mrow><msub><mi>W</mi><mi>弹</mi></msub><mo>=</mo><mo>-</mo><msub><mi>△E</mi>p弹</msub></math>
+	2. 弹力的功等于弹性势能的变化,即<math><mrow><msub><mi>W</mi><mi>弹</mi></msub><mo>=</mo><mo>-</mo><msub><mi>△E</mi><mi>p弹</mi></msub></math>
 	
 	3. 合力的功等于动能的的变化,即<math><mrow><mi>W</mi><mo>=</mo><mo></mo><msub><mi>△E</mi><mi>k</mi></msub></math>
 	
 	4. 重力(或系统内弹簧弹力)之外的其他力的功等于机械能的变化,即<math><mrow><msub><mi>W</mi><mi>其他</mi></msub><mo>=</mo><mi>△E</mi></math>
 	
-	5. 一对滑动摩擦力做的功等于热量的变化，即<math><mrow><mi>Q</mi><mo>=</mo><msub><mi>F</mi><mi>f</mi></msub><mo>·</mo><msub><mi>x</mi>相对</msub></mrow></math>
+	5. 一对滑动摩擦力做的功等于热量的变化，即<math><mrow><mi>Q</mi><mo>=</mo><msub><mi>F</mi><mi>f</mi></msub><mo>·</mo><msub><mi>x</mi><mi>相对</mi></msub></mrow></math>
 
 <h4>3. 在动力学和能量观点的综合运用中：</h4>
 
@@ -86,7 +86,7 @@
 </p>
 <p>解得：<math><mrow><msub><mi>F</mi><mi>x</mi></msub><mo>=</mo><mi>mg</mi></mrow></math>
 </p>
-<p>电场力的大小：<math><mrow><msub><mi>F</mi><mi>电</mi></msub><mo>=</mo><msqrt><msup><msub><mi>F</mi><mi>x</mi></msub>2</msup><mo>+</mo><msup><msub><mi>F</mi><mi>y</mi></msub><mn>2</mn></msup></msqrt><mo>=</mo><msqrt><mn>2</mn></msqrt><mi>mg</mi></mrow></math>
+<p>电场力的大小：<math><mrow><msub><mi>F</mi><mi>电</mi></msub><mo>=</mo><msqrt><msup><msub><mi>F</mi><mi>x</mi></msub><mn>2</mn></msup><mo>+</mo><msup><msub><mi>F</mi><mi>y</mi></msub><mn>2</mn></msup></msqrt><mo>=</mo><msqrt><mn>2</mn></msqrt><mi>mg</mi></mrow></math>
 </p>
 <p>（3）小球经过管口C处时， <math><mrow><msub><mi>v</mi><mi>c</mi></msub><mo>=</mo><mn>2</mn><msqrt><mi>gR</mi></msqrt></mrow></math>          
 </p>
