--- a/201903022101.html
+++ b/201903022101.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <head>
 <title="2019.3.2物理">
 </head>
@@ -90,7 +90,7 @@
 </p>
 <p>（3）小球经过管口C处时， <math><mrow><msub><mi>v</mi><mi>c</mi></msub><mo>=</mo><mn>2</mn><msqrt><mi>gR</mi></msqrt></mrow></math>          
 </p>
-<p>设弹力N的方向向左，则：  <math><mrow><msub><mi>F</mi><mi>x</mi></msub><mo>-</mo><mi>N</mi><mo>=</mo><mi>m</mi><mtable><mtr><mtd><msup><msub><mi>v</mi><mi>C</mi></msub><mn>2</mn></msup></mtd></mtr><mtr><mtd><mo>---</mo></mtd></mtr><mtr><mtd><mi>R</mi></mtd></mtr></mtable></mrow></math>       
+<p>设弹力N的方向向左，则：  <math><mrow><msub><mi>F</mi><mi>x</mi></msub><mo>+</mo><mi>N</mi><mo>=</mo><mi>m</mi><mtable><mtr><mtd><msup><msub><mi>v</mi><mi>C</mi></msub><mn>2</mn></msup></mtd></mtr><mtr><mtd><mo>---</mo></mtd></mtr><mtr><mtd><mi>R</mi></mtd></mtr></mtable></mrow></math>       
 </p>
 <p>解得：N=3mg(方向向左)</p>               
 
